--- a/kode-intership-2025-react/markup/css/style.css
+++ b/kode-intership-2025-react/markup/css/style.css
@@ -50,9 +50,12 @@ img {
     display: block;
 }
 
+.search {
+    margin-top: 8px;
+}
 
 .search__wrapper{
-    padding: 16px;
+    padding: 0 16px;
     margin: 0 auto;
     width: 100%;
 
@@ -76,11 +79,14 @@ img {
 
 .search-input {
     background-color: #F7F7F8;
-    color:#fff;
+    color:#000;
 
     width:100%;
     border-radius: 16px;
     padding:12px 44px;
+
+    font-size: 18px;
+    font-weight: 500;
 
     border:none;
 }
@@ -107,5 +113,92 @@ img {
 
     position: absolute;
     left: 14px;
-    top:8px;
+    top:12px;
+}
+
+.search__field::before{
+    content:'';
+    width:20px;
+    height: 20px;
+    background-image: url(svg/list.svg);
+
+    position: absolute;
+    right: 14px;
+    top:12px;
+}
+
+.employee-list__wrapper {
+    padding: 0 16px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.employee-list__job-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    padding: 0 16px;
+    margin: 0 auto;
+    width: 100%;
+
+    border-bottom: 1px solid #C3C3C6;
+}
+
+@media (min-width:700px) {
+    .employee-list__job-list{
+        flex-direction: row;
+    }
+}
+
+.employee-list__list{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.employee-list__job-item {
+  font-weight: 600;
+  font-size: 15px;
+
+  padding: 8px 12px;
+
+}
+
+.employee-list__job-item--active {
+    border-bottom: 2px solid #6534FF;
+}
+
+.employee-list__wrapper {
+    margin-top: 22px;
+}
+
+.employee-list__card {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.employee-list__card-img {
+    width: 72px;
+    height: 72px;
+
+    border-radius: 50%;
+}
+
+.employee-list__card-name {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.employee-list__card-name-job {
+    font-size: 14px;
+    font-weight: 500;
+    color:#97979B;
+}
+
+.employee-list__card-job-title {
+    color: #55555C;
+    font-size: 13px;
+    font-weight: 400;
 }
