--- a/kode-intership-2025-react/src/index.css
+++ b/kode-intership-2025-react/src/index.css
@@ -1,68 +1,204 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: Inter, sans-serif; 
+  font-size: 16px;
+  color: #333;
+  background-color: #fff;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
 }
+
+
+a {
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.3s ease-in-out;
+}
+
+
+
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  border: none;
+  background: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+
+
+ul, ol {
+  list-style: none;
+}
+
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.search {
+  margin-top: 8px;
+}
+
+.search__wrapper{
+  padding: 0 16px;
+  margin: 0 auto;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.search__title {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 28px;
+
+  margin-left: 8px;
+}
+
+.search__field {
+  display: flex;
+}
+
+
+.search-input {
+  background-color: #F7F7F8;
+  color:#000;
+
+  width:100%;
+  border-radius: 16px;
+  padding:12px 44px;
+
+  font-size: 18px;
+  font-weight: 500;
+
+  border:none;
+}
+
+.search-input::placeholder {
+  color:#C3C3C6;
+
+  font-size: 18px;
+  font-weight: 500;
+
+  position: relative;
+  top: 3px;
+}
+
+.search__field {
+  position: relative;
+}
+
+.search__field::after{
+  content:'';
+  width:20px;
+  height: 20px;
+  background-image: url(svg/search.svg);
+
+  position: absolute;
+  left: 14px;
+  top:12px;
+}
+
+.search__field::before{
+  content:'';
+  width:20px;
+  height: 20px;
+  background-image: url(svg/list.svg);
+
+  position: absolute;
+  right: 14px;
+  top:12px;
+}
+
+.employee-list__wrapper {
+  padding: 0 16px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.employee-list__job-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  padding: 0 16px;
+  margin: 0 auto;
+  width: 100%;
+
+  border-bottom: 1px solid #C3C3C6;
+}
+
+@media (min-width:700px) {
+  .employee-list__job-list{
+      flex-direction: row;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+}
+
+.employee-list__list{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.employee-list__job-item {
+font-weight: 600;
+font-size: 15px;
+
+padding: 8px 12px;
+
+}
+
+.employee-list__job-item--active {
+  border-bottom: 2px solid #6534FF;
+}
+
+.employee-list__wrapper {
+  margin-top: 22px;
+}
+
+.employee-list__card {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.employee-list__card-img {
+  width: 72px;
+  height: 72px;
+
+  border-radius: 50%;
+}
+
+.employee-list__card-name {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.employee-list__card-name-job {
+  font-size: 14px;
+  font-weight: 500;
+  color:#97979B;
+}
+
+.employee-list__card-job-title {
+  color: #55555C;
+  font-size: 13px;
+  font-weight: 400;
 }
