--- a/kode-intership-2025-react/src/index.css
+++ b/kode-intership-2025-react/src/index.css
@@ -192,3 +192,110 @@ padding: 8px 12px;
   font-size: 13px;
   font-weight: 400;
 }
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(45, 52, 64, 0.3);
+}
+
+
+
+.modal{
+    position: relative;
+    margin: auto;
+    padding: 24px 16px;
+    background-color: #ffffff;
+    border-radius: 20px;
+}
+.modal-sort{
+  width:373px;
+  box-sizing: border-box;
+}
+
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 24px;
+  right: 32px;
+  width: 24px;
+  height: 24px;
+
+  border: none;
+  cursor: pointer;
+}
+.modal-title{
+  font-family: Inter, sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color: #050510;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.modal-sort-list {
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
+.radio {
+  display: flex;
+  align-items: center;
+}
+
+.radio:hover .radio__control-mark {
+  border: 2px solid #6534FF;
+}
+
+.radio__description {
+  font-weight: 500;
+  font-size: 16px;
+  color: #000;
+  max-width: 800px;
+}
+
+.radio__control-mark {
+  position: relative;
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #6534FF;
+  margin-right: 14px;
+
+}
+
+.radio__input:checked + .radio__control-mark::before {
+  content: "";
+  position: absolute;
+  width: 43.57%;
+  height: 43.57%;
+  background-color: #fff;
+  border-radius: 50%;
+
+  top: 29%;
+  left: 29%;
+}
+
+.radio__input:checked + .radio__control-mark {
+  background-color: #6534FF;
+}
