--- a/kode-intership-2025-react/src/index.css
+++ b/kode-intership-2025-react/src/index.css
@@ -331,3 +331,29 @@ font-size: 15px;
 font-weight: 500;
 color: #C3C3C6;
 }
+
+
+.employee-error {
+  margin-top: 133px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap:12px;
+}
+
+.employee-error__title {
+  font-size: 17px;
+  font-weight: 600;
+}
+.employee-error__promise {
+  font-size: 16px;
+  font-weight: 400;
+  color: #97979B;
+}
+.employee-error__button {
+  font-size: 16px;
+  font-weight: 600;
+  color:#6534FF;
+}
