Поменял функцию сортировки

--- a/kode-intership-2025-react/markup/css/style.css
+++ b/kode-intership-2025-react/markup/css/style.css
@@ -337,7 +337,7 @@ img {
     font-size: 17px;
     font-weight: 600;
   }
-  .employee-error__promice {
+  .employee-error__promise {
     font-size: 16px;
     font-weight: 400;
     color: #97979B;
